
Thud, by Anthony Parker <asp@mac.com>, Tony at 3030MUX

Version History:

1.1
 
 Note: Due to changes in the preferences file format, your preferences will be reset on starting this version. Sorry. Again.
 
 New Features / Other Changes:
 
  * A preference to adjust the length of heading/speed indicator lines on contacts on the map. The lower the number, the longer the line.
  * A preference to limit the amount of lines in the scrollback. Keeping this number lower reduces memory usage and speeds up Thud.
  * A new menu with 3 menu items to control the speed of updates that Thud sends. Keep it on Slow to reduce bandwidth usage, crank it to Fast when bad guys show up.
  * Thud now has an option to keep 'old' data instead of overwriting it with 'unknown.' If it 'Erase Unknown Terrain' is set, Thud will overwrite any old terrain and turn it to a black hex if it gets a '?' for it now. This mostly happens underground. If you want to keep a 'backlog' of terrain underground, uncheck this option.
  * Thud keeps 'expired' contacts around 3 times longer now. 
  * Thud no longer colors destroyed contacts grey, leaving that color soley for expired contacts. In addition, enemy destroyed contacts will not be displayed in bold any longer. Destroyed contacts are still styled strike-through however.
  
 Bug fixes:
 
  * Finally found and fixed the 'straight lines aren't straight' bug. Hexes are properly shaped now.
  * Reduced memory usage of map data
  * Increased efficiency of parsing data from the MUX
  * Thud won't keep sending commands if it's lagged... it'll hold up until it gets some data again before resuming spamming you
  
1.0

 The focus of the final 1.0 release has been enhancements in speed and bug fixes. There are also a few minor new features.
 All users are encouraged to use this new release and upgrade from any older version.
 Note: Due to changes in the preferences file format, your preferences will be reset on starting this version. Sorry.
 
 New Features:
 